Bug 1735191 - Assert current transaction state is not invalid. r=smaug

Asserting invalid values identifies the missing state transition.

Differential Revision: https://phabricator.services.mozilla.com/D153761